--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ db_name: database
 admin_user: admin
 admin_pass: password
 table1:
-    name: "Database1"
+    name: "tb1"
     field:
         name: "City"
         type: "dropdown"
